automatically backed up by learn

--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -21,7 +21,10 @@
           <td><%= link_to "Go on " + a.name, a %></td>
       </tr>
     <% end %>
-
   </tbody>
 </table>
 <br>
+
+<% if current_user.admin %>
+  
+<% end %>
