--- a/app/views/attractions/new.html.erb
+++ b/app/views/attractions/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user do |f| %>
+<%= form_for @attraction do |f| %>
   <div class="form-group">
     <%= f.label :name %> <br>
     <%= f.text_field :name, class: 'form-control' %>
