automatically backed up by learn

--- a/app/views/attractions/index.html.erb
+++ b/app/views/attractions/index.html.erb
@@ -17,7 +17,7 @@
     <% @attractions.each do |a| %>
       <tr>
         <td><%= a.name %></td>
-        <td><%= a.tickets %></td
+        <td><%= a.tickets %></td>
           <% if current_user.admin %>
             <td><%= link_to "Show " + a.name, a %></td>
           <% else %>
