--- a/app/views/attractions/show.html.erb
+++ b/app/views/attractions/show.html.erb
@@ -8,7 +8,7 @@
     <p><strong>Nausea Rating:</strong> <%= @attraction.nausea_rating %></p>
     <p><strong>Happiness Rating:</strong> <%= @attraction.happiness_rating %></p>
     <% if current_user.admin %>
-      <%= link_to edit_attraction_path, "Edit Attraction" %>
+      <%= link_to "Edit Attraction", edit_attraction_path %>
     <% else %>
       <%= button_to 'Go on this ride', ride_attraction_path, class: 'btn btn-primary' %>
     <% end %>
